add new todo modal component and new todo logic

--- a/src/components/NewTodoButton/style.module.scss
+++ b/src/components/NewTodoButton/style.module.scss
@@ -17,7 +17,7 @@
         font-size: 64px;
         align-items: center;
         position: relative;
-        top: 10%;
+        top: 6px;
         text-align: center;
     }
 }
