--- a/src/components/TodoItem/style.module.scss
+++ b/src/components/TodoItem/style.module.scss
@@ -1,26 +1,36 @@
-.wrapper{
-    width: 312px;
-    min-height: 51px;
-    border: 1px solid #E6E6E6;
-    box-shadow: 0 4px 4px #E5E5E5;
-    border-radius: 3px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 25px;
+.wrapper {
+  width: 312px;
+  min-height: 51px;
+  border: 1px solid #E6E6E6;
+  box-shadow: 0 4px 4px #E5E5E5;
+  border-radius: 3px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 25px;
 
-    p{
-        margin-left: 10px;
-        word-wrap: break-word; 
-    }
+  p {
+    margin-left: 10px;
+    word-wrap: break-word;
+  }
 
-    &:hover{
-        cursor: pointer;
-    }
+  &:hover {
+    cursor: pointer;
+  }
 
-    user-select: none;
+  user-select: none;
 }
 
-.completed{
-color: #8A8A8A;
-text-decoration-line: line-through;
+.completed {
+  color: #8A8A8A;
+  text-decoration-line: line-through;
+}
+
+.leftWrapper {
+  display: inline-block;
+  width: 90%;
+}
+
+.rightWrapper {
+  display: inline-block;
+  width: 10%;
 }
