--- a/src/components/TodoList/style.module.scss
+++ b/src/components/TodoList/style.module.scss
@@ -1,6 +1,6 @@
 .container{
     width: 350px;
-    height: 600px;
+    height: 400px;
     border-radius: 8px;
     background-color: #fff;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
@@ -20,7 +20,7 @@
     margin-left: auto;
     margin-right: auto;
     width: 98%;
-    height: 450px;
+    height: 300px;
     overflow-y: scroll;
     overflow-x: hidden;
     &::-webkit-scrollbar {
@@ -39,12 +39,41 @@
   position: relative;
   left: 125px;
   width: fit-content;
-  top: -40px;
+  top: -90px;
 }
 .modalWrapper{
   position: absolute;
   z-index: 2;
   top: 35%;
   left: 50%;
-  transform: translate(-50%, -70%);
+  transform: translate(-50%, -50%);
 }
+@media (min-height: 600px) {
+  .container{
+    height: 460px;
+  }
+  .body{
+    height: 300px;
+  }
+  .buttonWrapper{
+    position: relative;
+    left: 125px;
+    width: fit-content;
+    top: -40px;
+  }
+}
+@media (min-height: 670px) {
+  .container{
+    height: 600px;
+  }
+  .body{
+    height: 450px;
+  }
+  .buttonWrapper{
+    position: relative;
+    left: 125px;
+    width: fit-content;
+    top: -40px;
+  }
+}
+
